--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,7 +13,7 @@ spring:
     date-format: 'yyyy-MM-dd' #格式化json
 
   resources: # 静态资源路径
-    static-locations: classpath:/META-INF/resources/,classpath:/resources/,classpath:/static/,classpath:/public/,classpath:/templates/
+    static-locations: classpath:/META-INF/resources/,classpath:/resources/,classpath:/static/,classpath:/public/,classpath:/templates/,classpath:/css/,classpath:/css1/,classpath:/fonts/,classpath:/fonts1/,classpath:/images/,classpath:/images1/,classpath:/js/,classpath:/js1/,classpath:/plugins/,classpath:/styles/
 
   thymeleaf:
     cache: false  # 使用模板缓存
