--- a/pom.xml
+++ b/pom.xml
@@ -74,5 +74,15 @@
             <artifactId>pagehelper-spring-boot-starter</artifactId>
             <version>1.2.11</version>
         </dependency>
+        <dependency>
+            <groupId>com.aliyun</groupId>
+            <artifactId>aliyun-java-sdk-core</artifactId>
+            <version>3.2.8</version>
+        </dependency>
+        <dependency>
+            <groupId>com.aliyun</groupId>
+            <artifactId>aliyun-java-sdk-dysmsapi</artifactId>
+            <version>1.1.0</version>
+        </dependency>
     </dependencies>
 </project>
