--- a/pom.xml
+++ b/pom.xml
@@ -79,10 +79,26 @@
             <artifactId>aliyun-java-sdk-core</artifactId>
             <version>3.2.8</version>
         </dependency>
+        <!--引入阿里云-->
         <dependency>
             <groupId>com.aliyun</groupId>
             <artifactId>aliyun-java-sdk-dysmsapi</artifactId>
             <version>1.1.0</version>
         </dependency>
+
+
+        <dependency>
+            <groupId>net.sourceforge.tess4j</groupId>
+            <artifactId>tess4j</artifactId>
+            <version>3.4.8</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.tomcat.embed</groupId>
+            <artifactId>tomcat-embed-jasper</artifactId>
+            <!--<scope>provided</scope>-->
+        </dependency>
+
     </dependencies>
+
 </project>
