--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,12 @@
             <version>1.1.0</version>
         </dependency>
 
+        <!--引入支付宝沙箱依赖-->
+        <dependency>
+            <groupId>com.alipay.sdk</groupId>
+            <artifactId>alipay-sdk-java</artifactId>
+            <version>3.0.0</version>
+        </dependency>
     </dependencies>
 
 </project>
